Yet another attempt to fix the light/dark mode bug

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -423,7 +423,8 @@ footer
     transform: none;
     text-align: center;
     font-size: 3rem;        
-    margin: 3rem 0;       
+    margin: 3rem 0;  
+    color: black !important;     
   }
 
   .secondTitle 
@@ -434,11 +435,6 @@ footer
   .lpText, .ssText, .msText 
   {
     font-size: 1.5rem;
-  }
-
-  main 
-  {
-    grid-template-columns: 1fr 2fr 2fr 1fr; 
   }
 
   .middleBlock 
@@ -472,7 +468,6 @@ footer
 
   header 
   {
-    grid-template-columns: 1fr 1fr 1fr;
     height: auto;
   }
 
@@ -488,7 +483,7 @@ footer
 
   .dropdownMenu 
   {
-    width: 10rem; 
+    width: 6rem; 
     padding: 0.5rem 0;
   }
 
@@ -496,6 +491,17 @@ footer
   {
     font-size: 1rem;
     width: 50%;
+  }
+
+  .searchBar input,
+  .searchBar input:focus,
+  .searchBar input:hover,
+  .searchBar input:active,
+  .searchBar input:-webkit-autofill   
+  {
+    border-color: white !important;
+    background-color: black !important;
+    color: white !important;
   }
   
   .dcLogo 
